// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserDetails > renders in editable mode 1`] = `
<ul
  class="details editable"
  data-v-a170885f=""
>
  
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I am a student"
        >
          I am a student
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I am a worker"
        >
          I am a worker
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I really like my job"
        >
          I really like my job
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="English"
        >
          English
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Berlin"
        >
          Berlin
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Yeah!"
        >
          Yeah!
        </span>
        <button
          class="pl-1"
          data-v-a170885f=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-a170885f=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders in non-editable mode 1`] = `
<ul
  class="details"
  data-v-a170885f=""
>
  
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I am a student"
        >
          I am a student
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I am a worker"
        >
          I am a worker
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="I really like my job"
        >
          I really like my job
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="English"
        >
          English
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Berlin"
        >
          Berlin
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Yeah!"
        >
          Yeah!
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders placeholders 1`] = `
<ul
  class="details"
  data-v-a170885f=""
>
  
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Mein Standort"
        >
          Mein Standort
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Meine Arbeit"
        >
          Meine Arbeit
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Meine Ausbildung"
        >
          Meine Ausbildung
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Wie ich mich heute fühle"
        >
          Wie ich mich heute fühle
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Sprachen, die ich spreche"
        >
          Sprachen, die ich spreche
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders placeholders in editable mode 1`] = `
<ul
  class="details editable"
  data-v-a170885f=""
>
  
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Mein Standort"
        >
          Mein Standort
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Meine Arbeit"
        >
          Meine Arbeit
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Meine Ausbildung"
        >
          Meine Ausbildung
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Wie ich mich heute fühle"
        >
          Wie ich mich heute fühle
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    class="detail"
    data-v-a170885f=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail-chip border-thin"
      data-v-a170885f=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-a170885f=""
        />
        <span
          class="detail-text"
          data-v-a170885f=""
          tabindex="0"
          title="Sprachen, die ich spreche"
        >
          Sprachen, die ich spreche
        </span>
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;
